# myrustfmt

./: Cargo.toml  README.md  behavior.md  build.rs  dogfood  format  format-rustc  rust-toolchain  rust-toolchain.toml  rustfmt differences.md  temp.rs  theory.md  todo.md  todo.rs
src/: ast_formatter.rs  ast_module.rs  ast_utils.rs  config.rs  constraint_writer.rs  constraints.rs  error.rs  error_emitter.rs  format_tree.rs  lib.rs  macro_args.rs  main.rs  module_extras.rs  num.rs  out.rs  parse.rs  rustfmt_config_defaults.rs  source_formatter.rs  source_reader.rs  span.rs  std_macro.rs  submodules.rs  whitespace.rs  withlexer.rs  withparser.rs  writer.rs
src/ast_formatter/: attr.rs  backtrack.rs  binary.rs  binary_expr.rs  block.rs  brackets.rs  checkpoint.rs  common.rs  constraint_modifiers.rs  dot_chain.rs  expr.rs  fallback.rs  fallback_chain.rs  fn.rs  generics.rs  infix_chain.rs  item.rs  last_line.rs  list.rs  local.rs  match.rs  mod.rs  pat.rs  path.rs  postfix_chain.rs  qpath.rs  std_macro.rs  tail.rs  ty.rs  util.rs  whitespace.rs  width_thresholds.rs  wrapping.rs
src/ast_formatter/ast/: attr.rs  block.rs  common.rs  expr.rs  fn.rs  generics.rs  item.rs  local.rs  macro.rs  mod.rs  pat.rs  path.rs  ty.rs
src/ast_formatter/ast/expr/: binary.rs  binary_expr.rs  match.rs  postfix.rs  postfix_chain.rs
src/ast_formatter/ast/item/: mod.rs  sort.rs  use_tree.rs
src/ast_formatter/expr/: binary.rs  match.rs  postfix_chain.rs
src/ast_formatter/list/: braces.rs  builder.rs  config.rs  list_config.rs  list_item_config.rs  list_item_context.rs  mod.rs  options.rs  overflow.rs  rest.rs
src/ast_formatter/util/: assign.rs  ast.rs  constraint_effects.rs  constraint_modifiers.rs  debug.rs  embraced.rs  enclosed.rs  error.rs  expr_utils.rs  indent.rs  infix.rs  infix_chain.rs  mod.rs  simulate_wrap.rs  sort.rs  tail.rs  take_while_within_margin.rs  wrapping.rs
src/ast_utils/: mod.rs  spans.rs  use_tree_order.rs
src/constraint_writer/: checkpoint.rs  mod.rs
src/formatter/: fallback_chain.rs  list.rs  mod.rs
src/formatter/ast/: block.rs  common.rs  expr.rs  fn.rs  item.rs  local.rs  mod.rs  pat.rs  ty.rs
src/source_formatter/: checkpoint.rs  mod.rs  source_reader.rs  whitespace.rs  whitespace_and_comments.rs
src/util/: cell_ext.rs  chars.rs  cmp.rs  default.rs  display.rs  drop.rs  line_col.rs  mod.rs  option.rs  rustc.rs  whitespace_utils.rs
tests/: all_test.rs  array.rs  binary_operators.rs  breakpoint_tests.rs  dogfood.rs  dot_chains.rs  if.rs  local.rs  match.rs  module_errors.rs  output_tests.rs  overflow.rs  pat.rs  rustfmt_tests.rs  slow_test.rs  small_tests.rs  unstable_features.rs  use_tree.rs  util.rs
tests/breakpoint_tests/: array.yaml  local.yaml
tests/module_errors/: stderr.txt
tests/output_tests/: temp  temp.rs  temp2.rs
tests/output_tests/attribute/: module.rs
tests/output_tests/comments/: inside array.rs  line comment after block opening and closing brace.rs  line comment after block opening brace without space.rs  line comment after if block opening.rs  suffix a token with a multi-line block.stderr  trailing spaces.rs
tests/output_tests/expr/: ref.rs  underscore.rs
tests/output_tests/expr/array/: max width.rs
tests/output_tests/expr/binary/: precedence grouping.rs  same line within indent.rs
tests/output_tests/expr/block/: label.rs  single expression.rs
tests/output_tests/expr/call/: args width limit.rs  breakpoint on function.rs  breakpoint on nested single arg calls.rs  (+10 more)
tests/output_tests/item/: extern mod.rs  generic_bounds.rs  generic_params.rs  union.rs
tests/output_tests/local/: comments.rs
tests/output_tests/macro call/: std macros.rs  unknown macros.rs
tests/output_tests/overflow/: prefer overflow closure to wrapping closure.rs
tests/output_tests/pattern/: paren.rs
tests/output_tests/ty/: fn.rs  ptr.rs
tests/output_tests/use/: above comments.rs  above other items.rs  breakpoint on multi-line group.rs  group with single item.rs  multiple groups.rs  nested groups and singletons.rs  sort.rs
tests/rustfmt_tests/source/: assignment.rs
tests/small_tests/: TODO.yaml  array.yaml  attribute.yaml  binop.yaml  call.yaml  chain.yaml  comments.yaml  index.yaml  local.yaml  match.yaml  match_.yaml  overflow.yaml  paren.yaml  pattern.yaml  postfix.yaml  temp.rs  temp.yaml  todo.rs  touchy_margins.yaml  use.yaml
tests/small_tests/comments/: inside block.rs  inside empty array.rs  line comment at beginning and end of module.rs  prefix a token with a multi-line block.rs  prefix a token with a multi-line block.stderr  prefix a token with a single-line block.rs  retain space around one-line block comment.rs  suffix a token with a multi-line block.rs  suffix a token with a single-line block comment.rs
tests/small_tests/expr/: array.yaml  binary_expr.yaml  block.yaml  break and continue.rs  break.yaml  cast.yaml  for_loop.yaml  index.yaml  loop.yaml  match.yaml  paren.yaml  path.yaml  postfix.yaml  range.yaml
tests/small_tests/expression/: array.yaml  binop.yaml  block.yaml  call.yaml  closure.yaml  const_block.yaml  if.yaml  match.yaml  postfix.yaml  range.yaml
tests/small_tests/item/: const.yaml  extern mod.rs  fn.yaml  generic_bounds.rs  impl.yaml  mac_call_item.yaml  struct.yaml  trait.yaml  vis.yaml  visibility.rs  where clause.rs
tests/small_tests/overflow/: nested overflow.rs
tests/small_tests/ty/: impl Fn.rs  macro_call.rs  tuple.yaml
tests/small_tests/use/: nested groups and singletons.rs  sort.rs
tests/small_tests_rs/attribute/: with value pair.rs
tests/small_tests_rs/expr/: unsafe block.rs
tests/submodules_tests/non_relative/: main.rs
tests/test_lib/: mod.rs
(+252 files in other folders)
