[package]
name = "myrustfmt"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.35"
#tracing-subscriber = "0.3.19"
# https://youtrack.jetbrains.com/issue/RUST-946/Cant-find-libsyntax-from-rust-sources-in-external-librairies
rustc_ast = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_ast" }
rustc_data_structures = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures" }
rustc_driver = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_driver" }
rustc_errors = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_errors" }
rustc_lexer = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_lexer" }
rustc_parse = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_parse" }
rustc_session = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_session" }
rustc_span = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_span" }

#[target.'cfg(target_os = "intellij-hack")'.dependencies]
# rustc --print sysroot
#rustc_lexer = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_lexer" }

[dev-dependencies]
#tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

#[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
#rustc_private = true

[features]
# Defines a feature named `webp` that does not enable any other features.
intellij-hack = []
other-feature = []