[package]
name = "myrustfmt"
version = "0.1.0"
edition = "2024"
#build = "build.rs"

[dependencies]
tracing = "0.1.35"
thiserror = "2.0.8"
serde = { version = "1.0.217", features = ["derive"] }
#tracing-subscriber = "0.3.19"
# https://youtrack.jetbrains.com/issue/RUST-946/Cant-find-libsyntax-from-rust-sources-in-external-librairies
# rustc --print sysroot
#rustc_ast = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_ast" }
#rustc_data_structures = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures" }
#rustc_driver = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_driver" }
#rustc_errors = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_errors" }
#rustc_lexer = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_lexer" }
#rustc_parse = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_parse" }
#rustc_session = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_session" }
#rustc_span = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_span" }

[dev-dependencies]
diff = "0.1.13"
regex = "1.11.1"
serde_yaml = "0.9.33"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

#[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
#rustc_private = true

[features]
intellij-hack = []
other-feature = []