[package]
name = "myrustfmt"
version = "0.1.0"
edition = "2024"

[dependencies]
enumset = "1.1.6"
tracing = "0.1.35"
getopts = "0.2.21"
# https://youtrack.jetbrains.com/issue/RUST-946/Cant-find-libsyntax-from-rust-sources-in-external-librairies
# rustc --print sysroot

#rustc_ast = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_ast" }
#rustc_data_structures = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_data_structures" }
#rustc_driver = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_driver" }
#rustc_errors = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_errors" }
#rustc_lexer = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_lexer" }
#rustc_parse = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_parse" }
#rustc_session = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_session" }
#rustc_span = { path = "../../.rustup/toolchains/nightly-2024-09-10-aarch64-apple-darwin/lib/rustlib/rustc-src/rust/compiler/rustc_span" }

[dev-dependencies]
datatest-stable = "0.3.2"
diff = "0.1.13"
regex = "1.11.1"
tracing-subscriber = "0.3.19"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }

#[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
#rustc_private = true

[features]
intellij-hack = []
other-feature = []

[[test]]
name = "small_tests"
harness = false
